--- a/index.html
+++ b/index.html
@@ -113,29 +113,72 @@
         <div class="weather-forecast-box ms-3">
           <h2>5 Days Forecast:</h2>
           <div class="forecast-item">
-            <img src="images/cloudy.png" alt="Cloudy" />
+            <img src="images/clouds-2-19.png" alt="Cloudy" />
             <span>20°C</span>
             <span>Friday, 1 Sep</span>
           </div>
           <div class="forecast-item">
-            <img src="images/partly-cloudy.png" alt="Partly Cloudy" />
+            <img src="images/mist-1-67.png" alt="Partly Cloudy" />
             <span>22°C</span>
             <span>Saturday, 2 Sep</span>
           </div>
           <div class="forecast-item">
-            <img src="images/sunny.png" alt="Sunny" />
+            <img src="images/clear-1-98.png" alt="Sunny" />
             <span>27°C</span>
             <span>Sunday, 3 Sep</span>
           </div>
           <div class="forecast-item">
-            <img src="images/rainy.png" alt="Rainy" />
+            <img src="images/drizzle-1-59.png" alt="Rainy" />
             <span>18°C</span>
             <span>Monday, 4 Sep</span>
           </div>
           <div class="forecast-item">
-            <img src="images/cloudy-rain.png" alt="Cloudy with Rain" />
+            <img src="images/rain-1-55.png" alt="Cloudy with Rain" />
             <span>16°C</span>
             <span>Tuesday, 5 Sep</span>
+          </div>
+        </div>
+
+        <!--Last Box-->
+        <!-- Hourly Forecast Box -->
+        <div class="hourly-forecast-box">
+          <h2>Hourly Forecast:</h2>
+          <div class="hourly-forecast-container">
+            <div class="hourly-item">
+              <span>12:00</span>
+              <img src="images/clear-1-98.png" alt="Sunny" />
+              <span>26°C</span>
+              <img src="images/navigation-1-7.png" alt="Sunny" />
+              <span>3km/h</span>
+            </div>
+            <div class="hourly-item">
+              <span>15:00</span>
+              <img src="images/clear-1-98.png" alt="Sunny" />
+              <span>27°C</span>
+              <img src="images/navigation-1-34.png" alt="Sunny" />
+              <span>2km/h</span>
+            </div>
+            <div class="hourly-item">
+              <span>18:00</span>
+              <img src="images/clouds-2-19.png" alt="Partly Cloudy" />
+              <span>27°C</span>
+              <img src="images/navigation-1-7.png" alt="Sunny" />
+              <span>2km/h</span>
+            </div>
+            <div class="hourly-item">
+              <span>21:00</span>
+              <img src="images/clouds-2-19.png" alt="Cloudy" />
+              <span>25°C</span>
+              <img src="images/navigation-1-16.png" alt="Sunny" />
+              <span>3km/h</span>
+            </div>
+            <div class="hourly-item">
+              <span>00:00</span>
+              <img src="images/clear-1-98.png" alt="Sunny" />
+              <span>22°C</span>
+              <img src="images/navigation-1-7.png" alt="Sunny" />
+              <span>3km/h</span>
+            </div>
           </div>
         </div>
       </div>
