--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <span>Friday, 1 Sep</span>
           </div>
           <div class="forecast-item">
-            <img src="images/mist-1-67.png" alt="Partly Cloudy" />
+            <img src="images/mist-1-67.png" alt="Partly Cloudy" class="Sat" />
             <span>22°C</span>
             <span>Saturday, 2 Sep</span>
           </div>
