added current location

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <!-- Current Location Button with Custom Image -->
-      <button class="btn btn-location mt-5">
+      <button id="currentLocationBtn" class="btn btn-location mt-5">
         <img src="images/node-123.png" class="location-icon" alt="Location" />
         Current Location
       </button>
